fixed z-index 'NavBar' bug

--- a/src/Components/NavBar/NavBar.module.css
+++ b/src/Components/NavBar/NavBar.module.css
@@ -6,6 +6,7 @@
     top: 0;
     height: 50px;
     padding: 5px 0;
+    z-index: 1;
 }
 
 /* navWrapper */
